Exceptions Commit v1
Adding Exception Handling